# everywhere-purescript

./: .gitignore  README.md
browser/: index.html
haskell/: LICENSE  app.js  guess.cabal  simple.cabal  stack.yaml
haskell/app/: Main.hs
java/: Main.java  app.js  context.js
purescript/: bower.json
purescript/bower_components/purescript-console/: .bower.json
purescript/bower_components/purescript-control/: .bower.json
purescript/bower_components/purescript-eff/: .bower.json
purescript/bower_components/purescript-integers/: .bower.json
purescript/bower_components/purescript-invariant/: .bower.json
purescript/bower_components/purescript-math/: .bower.json
purescript/bower_components/purescript-maybe/: .bower.json
purescript/bower_components/purescript-monoid/: .bower.json
purescript/bower_components/purescript-node-readline/: .bower.json
purescript/bower_components/purescript-prelude/: .bower.json
purescript/bower_components/purescript-random/: .bower.json
purescript/src/: Context.js  Context.purs  Main.purs
